// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyleCards, Buttons Check Button 1`] = `
Object {
  "button": Object {
    "background-color": "",
    "background-color-global": true,
    "background-palette-color": 4,
    "background-palette-opacity": 1,
    "background-palette-status": true,
    "border-color": "",
    "border-color-global": true,
    "border-palette-color": 5,
    "border-palette-opacity": 1,
    "border-palette-status": true,
    "color": "",
    "color-global": true,
    "font-family-general": "Roboto",
    "font-size-general": 20,
    "font-size-unit-general": "px",
    "font-size-unit-xl": "px",
    "font-size-unit-xxl": "px",
    "font-size-xl": 20,
    "font-size-xxl": 24,
    "font-style-general": "italic",
    "font-weight-general": "300",
    "hover-background-color": "",
    "hover-background-color-all": false,
    "hover-background-color-global": true,
    "hover-background-palette-color": 6,
    "hover-background-palette-opacity": 1,
    "hover-background-palette-status": true,
    "hover-border-color": "",
    "hover-border-color-all": false,
    "hover-border-color-global": true,
    "hover-border-palette-color": 6,
    "hover-border-palette-opacity": 1,
    "hover-border-palette-status": true,
    "hover-color": "",
    "hover-color-all": false,
    "hover-color-global": true,
    "hover-palette-color": 5,
    "hover-palette-opacity": 1,
    "hover-palette-status": true,
    "letter-spacing-general": 5,
    "letter-spacing-unit-general": "px",
    "letter-spacing-unit-xl": "px",
    "letter-spacing-unit-xxl": "px",
    "letter-spacing-xl": 5,
    "letter-spacing-xxl": 0,
    "line-height-general": 10,
    "line-height-unit-general": "%",
    "line-height-unit-xl": "%",
    "line-height-xl": 10,
    "palette-color": 4,
    "palette-opacity": 1,
    "palette-status": true,
    "text-decoration-general": "overline",
    "text-direction-general": "ltr",
    "text-indent-general": 44,
    "text-orientation-general": "mixed",
    "text-transform-general": "capitalize",
  },
}
`;

exports[`StyleCards, Buttons Should work on responsive 1`] = `
Object {
  "button": Object {
    "background-color": "",
    "background-color-global": false,
    "background-palette-color": 4,
    "background-palette-opacity": 1,
    "background-palette-status": true,
    "border-color": "",
    "border-color-global": false,
    "border-palette-color": 5,
    "border-palette-opacity": 1,
    "border-palette-status": true,
    "color": "",
    "color-global": false,
    "font-family-general": "",
    "font-family-l": "Roboto",
    "font-size-general": 16,
    "font-size-l": 20,
    "font-size-unit-general": "px",
    "font-size-unit-xl": "px",
    "font-size-unit-xxl": "px",
    "font-size-xl": 16,
    "font-size-xxl": 24,
    "font-style-general": "normal",
    "font-style-l": "italic",
    "font-weight-general": 400,
    "font-weight-l": "300",
    "hover-background-color": "",
    "hover-background-color-all": false,
    "hover-background-color-global": false,
    "hover-background-palette-color": 6,
    "hover-background-palette-opacity": 1,
    "hover-background-palette-status": true,
    "hover-border-color": "",
    "hover-border-color-all": false,
    "hover-border-color-global": false,
    "hover-border-palette-color": 6,
    "hover-border-palette-opacity": 1,
    "hover-border-palette-status": true,
    "hover-color": "",
    "hover-color-all": false,
    "hover-color-global": false,
    "hover-palette-color": 5,
    "hover-palette-opacity": 1,
    "hover-palette-status": true,
    "letter-spacing-general": 0,
    "letter-spacing-l": 5,
    "letter-spacing-unit-general": "px",
    "letter-spacing-unit-xl": "px",
    "letter-spacing-unit-xxl": "px",
    "letter-spacing-xl": 0,
    "letter-spacing-xxl": 0,
    "line-height-general": 100,
    "line-height-l": 10,
    "line-height-unit-general": "%",
    "line-height-unit-xl": "%",
    "line-height-xl": 100,
    "palette-color": 1,
    "palette-opacity": 1,
    "palette-status": true,
    "text-decoration-general": "unset",
    "text-decoration-l": "overline",
    "text-direction-general": "ltr",
    "text-direction-l": "ltr",
    "text-indent-l": 44,
    "text-orientation-general": "unset",
    "text-orientation-l": "mixed",
    "text-transform-general": "none",
    "text-transform-l": "capitalize",
  },
}
`;
